Bug 90072 - No character background (highlight) tab in paragraph styles dialog
Summary: No character background (highlight) tab in paragraph styles dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.2.2 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.1
Keywords: bibisectRequest, regression
: 91753 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-03-17 20:22 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-10-25 19:20 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Change character background on Paragraph Style Dialog in LO 4.3 (60.61 KB, image/png)
2015-04-06 15:57 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-03-17 20:22:44 UTC
If my understanding of paragraph styles are correct, all features of a character style can be included in a paragraph style, but if you open the paragraph style dialog, it shows an Area tab for paragraph background color, but doesnt have a tab to set the character background color (aka highlighting).
Comment 1 John L. ten Wolde 2015-03-30 22:13:58 UTC
It's not just effecting the 4.5.x branch as Jay has reported.  I can confirm the Background Tab to be AWOL in 4.4.0.3 release (Linux x86) and 4.4.1.2 release (Linux x86_64) as well.

Hopefully it's missing because of a regression and not because it has been intentionally replaced by the Area Tab (which doesn't offer quite the same functionality in my use case).

Note that there is now no easy way of editing or removing existing character backgrounds (aka highlighting) from paragraph styles in older documents and templates.  Yesterday I updated a years-old template by unzipping, editing, and re-zipping it manually.  Not a major hassle, but still an inconvenience.

For comparison, a screen-cap (not mine) of how the Paragraph Style dialogue used to look can be viewed here:

http://www.ahuka.com/wp-content/uploads/2012/07/Paragraph-style-window.png



Changing to: Component Writer; Version 4.4.0.3 release; Status NEW.  Please correct if this issue even older or effects more than just Writer.
Comment 2 Yousuf Philips (jay) (retired) 2015-03-31 09:56:15 UTC
This issue is inherited from OOo and affects all modules so i've changed the fields accordingly.

Cor, Stuart: It would be good to hear your input on this.
Comment 3 Cor Nouws 2015-03-31 10:07:33 UTC
Hi Jay,

(In reply to Jay Philips from comment #0)
> If my understanding of paragraph styles are correct, all features of a
> character style can be included in a paragraph style, but if you open the
> paragraph style dialog, it shows an Area tab for paragraph background color,
> but doesnt have a tab to set the character background color (aka
> highlighting).

Indeed it always has been like this.
One can set the background color.
That is also present in the Format > Character dialog.
And with the button Background color on the tool bar.

I would be careful to just add the highlighting in the dialog. And keep it as marking tool.
But maybe Thomas' work in highlighting, makes it necessary to rethink it all.
  http://zolnaitamas.blogspot.com/2015/03/word-compatible-text-highlighting-in.html
Comment 4 V Stuart Foote 2015-03-31 14:29:32 UTC
@Jay, *

This gets rather confusing because of differences with MSO and OOXML of handling of "Higlighting" or "Shading" and LO use of background color for characters and paragraphs.

This is wrapped up in bug 89830, and Zolnai spent a lot of time getting this tweaked in the export/import filters:

Adding him to the issue for some direct perspective of what should be done with the UI.

Into the ux-advise pool.

=-ref-=
http://nabble.documentfoundation.org/Discussion-about-highlighting-MS-compatibility-issue-tc4139399.html
Comment 5 John L. ten Wolde 2015-03-31 21:31:52 UTC
Interesting.  Just my 2 bits from a non-developer, end-user perspective:

1) For sanity, I totally support character backgrounds being rechristened "highlighting" in all instances.

2) Now that Bug 82661 has been resolved, I'd much prefer to use area fills for the particular use case I mention in Comment 1, but paragraph area fills can't serve my needs because they become hidden behind images and other area-filled frames -- even if those images and area-filled frames are set to "wrap through" + "in background".  Hence I presently depend on character highlighting being available in paragraph styles.  If the area fills being hidden behind other objects in this way isn't the intended behaviour please point me to an existing bug report (I couldn't find one), else I'll happily start my own.
Comment 6 Tamás Zolnai 2015-04-06 08:06:34 UTC
As I see it's a regression of LO 4.4. In 4.3 I see a Background tab where there is an option to switch between paragraph and character background. In 4.4 the Background tab was replaced with Area tab which has more options, but has no option to set character background.

In 4.5, it can be a good solution to add a new tab with the name "Highlighting" (instead of the simple "Background"), so it will be clear that it's a character attribute and not a paragraph one.

On the other hand I have no idea how to solve it in 4.4, since it needs an UI change which is not allowed in a bugfix release in general. I add Miklós, maybe he has more ideas about this Area thing.

A workaround:
1. Apply a selected style on a paragraph
2. Select the whole paragraph (formatted with the style in 1.)
3. Change character background directly
4. Update style from selection:
https://help.libreoffice.org/Writer/Updating_Styles_From_Selections
Comment 7 Yousuf Philips (jay) (retired) 2015-04-06 14:23:47 UTC
In 4.4, the paragraph background tab was renamed to 'Area', but that is still not character background color (aka highlight).
Comment 8 Tamás Zolnai 2015-04-06 15:57:10 UTC
Created attachment 114651 [details]
Change character background on Paragraph Style Dialog in LO 4.3
Comment 9 Yousuf Philips (jay) (retired) 2015-04-06 16:13:05 UTC
Thanks Zolnai for the clarification. :D
Comment 10 John L. ten Wolde 2015-04-06 20:44:44 UTC
(In reply to Zolnai Tamás from comment #6)
> 4. Update style from selection:

D'oh!  Thanks for that heads-up, Tamás.  It sure would have been much simpler than unzipping and hand-editing my OTT files the way I did.  :-/
Comment 11 John L. ten Wolde 2015-04-06 20:52:26 UTC
While I'm here, I'll restate my question from part 2 of comment 5 more succinctly:

Is the paragraph area fill _really_ intended to render _behind_ other objects such as filled-frames and images, or is this also a bug that begs reporting?

I would very much appreciate an answer.  Thank you.
Comment 12 Tamás Zolnai 2015-04-06 22:04:40 UTC
(In reply to John L. ten Wolde from comment #11)
> While I'm here, I'll restate my question from part 2 of comment 5 more
> succinctly:
> 
> Is the paragraph area fill _really_ intended to render _behind_ other
> objects such as filled-frames and images, or is this also a bug that begs
> reporting?
> 
> I would very much appreciate an answer.  Thank you.

I'm not sure it's a bug or not, but here is a report with the same issue: https://bugs.documentfoundation.org/show_bug.cgi?id=59326
Comment 13 Yousuf Philips (jay) (retired) 2015-04-12 09:10:39 UTC
Setting this to Writer as its a regression.
Comment 14 Commit Notification 2015-06-16 21:59:46 UTC
Zolnai Tamás committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9874db206eed84616e4e232b1b56c7b7532166a0

tdf#90072: No character background (highlight) tab in paragraph styles dialog

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2015-06-16 23:11:35 UTC
Zolnai Tamás committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=343f992816ab594c608537fd32fb4bf412f5fabb&h=libreoffice-5-0

tdf#90072: No character background (highlight) tab in paragraph styles dialog

It will be available in 5.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Tamás Zolnai 2015-06-19 07:13:01 UTC
*** Bug 91753 has been marked as a duplicate of this bug. ***
Comment 17 Robinson Tryon (qubit) 2015-12-17 08:49:14 UTC Comment hidden (obsolete)