tdf#90072: No character background (highlight) tab in paragraph styles dialog

Background Tab was replaced with Area Tab on Paragraph Style
Dialog. With that we lost the opportunity to set character background
color. So bring back the Background tab as Highlighting.

Change-Id: I29925f72816fbd27243060231d551e6590f1b9d9